Added A_Tuple.forEachCodepointInString() for tiny speed bump  Also spliteratorOfCodePoint(). - Indirection creation has its own StatisticReport. - Upgraded Gradle from 9.5.0 to 9.6.0. - Updated serializer to identify byte strings and two-byte strings, where before it relied solely on which descriptor was in use.